# speaker_new

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/usr_audio/: CMakeLists.txt  usr_audio.c  usr_audio.h
components/usr_common/: CMakeLists.txt  usr_common.c  usr_common.h
components/usr_led/: CMakeLists.txt  usr_led.c  usr_led.h
components/usr_mqtt/: CMakeLists.txt  usr_mqtt.c  usr_mqtt.h  usr_mqtt_msg.c  usr_mqtt_msg.h
main/: main.c
